# hive

./: Cargo.toml  README
html/: head.html  index.html  project.html  style.css  test.html
migrations/00-base/: up.sql
migrations/2025-10-31-190326-0000_init/: down.sql  up.sql
scripts/: bee.sh
src/: auth.rs  head.html  main.rs  models.rs  output.rs  routes.rs  schema.rs
static/: style.css
util/: Makefile  shackle.c
